src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Award_Engagement_Levels_for_Org_Giving__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this contact should receive engagement &quot;credit&quot; for gifts made by their organizations.  Generally this is used for owners of small businesses who give via their business.</inlineHelpText>
        <label>Award Engagement Levels for Org&apos;s Giving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Since_First_Action_at_Level__c</fullName>
        <formula>TODAY() -  First_Action_Date_Curr_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days In Current Engagement Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Level_Change_Log__c</fullName>
        <description>Used by engagement metrics to compare year-over-year levels for a contact.  Should be hidden from end users.  Serialized JSON of a list of apex objects w/ two properties.  Date of change, and value changed to.</description>
        <label>Engagement Level Change Log</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engagement_Level_Numeric_After_Override__c</fullName>
        <formula>MAX (  Engagement_Level_Override_Numeric__c ,  Engagement_Level_Numeric__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engagement Level Numeric After Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Level_Numeric__c</fullName>
        <description>set automatically by batch process</description>
        <label>Engagement Level Numeric</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Level_One_Year_Ago__c</fullName>
        <inlineHelpText>The contact&apos;s numeric engagement level one year ago, used in metrics for comparing change over time.</inlineHelpText>
        <label>Engagement Level One Year Ago</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Level_Override_Numeric__c</fullName>
        <formula>VALUE(LEFT(TEXT(Engagement_Level_Override__c ),1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engagement Level Override Numeric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Level_Override__c</fullName>
        <inlineHelpText>This will increase the contact&apos;s engagement level, if this level is higher than what they would otherwise get based on their activity/donor history.  It cannot lower their level, only raise it.  It is effective until the override end date specified.</inlineHelpText>
        <label>Engagement Level Override</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Following</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Endorsing</fullName>
                <color>#FFCC66</color>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Contributing</fullName>
                <color>#FF9900</color>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Owning</fullName>
                <color>#FF6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Leading</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engagement_Level__c</fullName>
        <description>set by batch process</description>
        <inlineHelpText>Current engagement level, automatically calculated.  If you want to manually change the level, do not attempt to change this field.  Instead, enter a value in Engagement Level Override.</inlineHelpText>
        <label>Engagement Level</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Following</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Endorsing</fullName>
                <color>#FFCC33</color>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Contributing</fullName>
                <color>#FF9900</color>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Owning</fullName>
                <color>#FF6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Leading</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engagement_Levels_Below_Peak__c</fullName>
        <formula>Engagement_Level_Numeric__c - Engagement_Peak_Numeric__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Compares current and peak level, indicates how many levels they have fallen off their peak.  If 0, means peak and current level are the same.</inlineHelpText>
        <label>Engagement Levels Below Peak</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Override_End_Date__c</fullName>
        <inlineHelpText>Override specified is effective until this date.</inlineHelpText>
        <label>Engagement Override End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engagement_Peak_Numeric__c</fullName>
        <description>set automatically by batch process</description>
        <label>Engagement Peak Numeric</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Peak__c</fullName>
        <inlineHelpText>The highest engagement level ever reached by this contact.

NOTE: This does not take into account any past overrides or formerly-checked checkboxes that affect engagement level.</inlineHelpText>
        <label>Engagement Peak</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Following</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Endorsing</fullName>
                <color>#FFCC66</color>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Contributing</fullName>
                <color>#FF9900</color>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Owning</fullName>
                <color>#FF6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Leading</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Action_Date_Curr_Level__c</fullName>
        <inlineHelpText>The date this contact moved into their current engagement level (whether up or down)</inlineHelpText>
        <label>In Engagement Level Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Engagement_Level_Date__c</fullName>
        <inlineHelpText>date the contact received their very first engagement level</inlineHelpText>
        <label>First Engagement Level Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Engagement_Level__c</fullName>
        <inlineHelpText>the very first engagement level received by this contact</inlineHelpText>
        <label>First Engagement Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Former_Engagement_Level_Numeric__c</fullName>
        <inlineHelpText>the previous engagement level for this contact, before they changed to their current level</inlineHelpText>
        <label>Former Engagement Level Numeric</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsDonor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by GW Engage to flag donors, in NPSP environment.  In GWBase environment, we use native GWBase field of same name.</description>
        <label>Donor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Engagement_Change__c</fullName>
        <formula>Engagement_Level_Numeric__c -  Former_Engagement_Level_Numeric__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gives the change in level that occurred the last time their level changed.  A positive number indicates their level rose, a negative indicates it fell.</inlineHelpText>
        <label>Last Engagement Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Engagement_Lvl_Chg_Datestamp__c</fullName>
        <inlineHelpText>date this contact&apos;s engagement level was last changed from one level to another</inlineHelpText>
        <label>Last Engagement Lvl Chg Datestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Leadership_Action_Date__c</fullName>
        <inlineHelpText>Date of most recent action taken (may include donations if your org includes that in Engagement Level calculations)</inlineHelpText>
        <label>Last Engagement Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__AlternateEmail__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__HomeEmail__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__Home_Address__c</fullName>
        <formula>if(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Home&quot;),
  if(LEN(MailingStreet)&gt;0, MailingStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(MailingCity)&gt;0, MailingCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingState)&gt;0, MailingState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingPostalCode)&gt;0, MailingPostalCode,&quot;&quot;) &amp; 
  If(LEN( MailingCountry ) &gt;0, &quot;, &quot; &amp;MailingCountry,&quot;&quot;)
,
if(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Home&quot;),
  if(LEN(OtherStreet)&gt;0, OtherStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(OtherCity)&gt;0, OtherCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherState)&gt;0, OtherState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherPostalCode)&gt;0, OtherPostalCode,&quot;&quot;) &amp; 
  If(LEN(OtherCountry ) &gt;0, &quot;, &quot; &amp; OtherCountry,&quot;&quot;)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Last_Donation_Date__c</fullName>
        <description>This field is only used with the one-to-one Organization to Contact model.</description>
        <formula>if( Account.npe01__One2OneContact__c = Id ,
Account.npe01__LastDonationDate__c,
null
)</formula>
        <inlineHelpText>WARNING - This field may not accurately reflect the donation history. Please use the Last Gift Date field instead.</inlineHelpText>
        <label>Last Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Lifetime_Giving_History_Amount__c</fullName>
        <description>This field is only used with the one-to-one Organization to Contact model.</description>
        <formula>IF( Account.npe01__One2OneContact__c = Id ,
Account.npe01__LifetimeDonationHistory_Amount__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>WARNING- This field may not accurately reflect donation histories. Please use the Total Amount field on the Contact record instead.</inlineHelpText>
        <label>Lifetime Transaction Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe01__Organization_Type__c</fullName>
        <formula>NULLVALUE(IF( Account.npe01__SYSTEM_AccountType__c==&quot;&quot;, TEXT(Account.Type),Account.npe01__SYSTEM_AccountType__c),&quot;Organization&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Other_Address__c</fullName>
        <formula>if(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Other&quot;),
  if(LEN(MailingStreet)&gt;0, MailingStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(MailingCity)&gt;0, MailingCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingState)&gt;0, MailingState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingPostalCode)&gt;0, MailingPostalCode,&quot;&quot;) &amp; 
  If(LEN( MailingCountry ) &gt;0, &quot;, &quot; &amp;MailingCountry,&quot;&quot;)
,
if(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Other&quot;),
  if(LEN(OtherStreet)&gt;0, OtherStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(OtherCity)&gt;0, OtherCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherState)&gt;0, OtherState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherPostalCode)&gt;0, OtherPostalCode,&quot;&quot;) &amp; 
  If(LEN(OtherCountry ) &gt;0, &quot;, &quot; &amp; OtherCountry,&quot;&quot;)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__PreferredPhone__c</fullName>
        <label>Preferred Phone</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Preferred_Email__c</fullName>
        <label>Preferred Email</label>
        <picklist>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Primary_Address_Type__c</fullName>
        <label>Primary Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Secondary_Address_Type__c</fullName>
        <label>Secondary Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__SystemAccountProcessor__c</fullName>
        <label>_SYSTEM: ACCOUNT PROCESSOR</label>
        <picklist>
            <picklistValues>
                <fullName>One-to-One</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__SystemIsIndividual__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is no longer used and should not be referenced. It has been replaced by Type_of_Account__c</inlineHelpText>
        <label>_SYSTEM: IsIndividual - DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Type_of_Account__c</fullName>
        <formula>IF(Account.npe01__SYSTEMIsIndividual__c,&quot;Individual&quot;,&quot;Organization&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the type of Account this Contact is connected to.</inlineHelpText>
        <label>Type of Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__WorkEmail__c</fullName>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__WorkPhone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npe01__Work_Address__c</fullName>
        <formula>if(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Work&quot;),
  if(LEN(MailingStreet)&gt;0, MailingStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(MailingCity)&gt;0, MailingCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingState)&gt;0, MailingState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingPostalCode)&gt;0, MailingPostalCode,&quot;&quot;) &amp; 
  If(LEN( MailingCountry ) &gt;0, &quot;, &quot; &amp;MailingCountry,&quot;&quot;)
,
if(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Work&quot;),
  if(LEN(OtherStreet)&gt;0, OtherStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(OtherCity)&gt;0, OtherCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherState)&gt;0, OtherState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherPostalCode)&gt;0, OtherPostalCode,&quot;&quot;) &amp; 
  If(LEN(OtherCountry ) &gt;0, &quot;, &quot; &amp; OtherCountry,&quot;&quot;)
  ,&quot;&quot; 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__AverageAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Average Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Best_Gift_Year_Total__c</fullName>
        <label>Best Gift Year Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Best_Gift_Year__c</fullName>
        <label>Best Gift Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__FirstCloseDate__c</fullName>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__Formula_HouseholdMailingAddress__c</fullName>
        <formula>npo02__Household__r.npo02__Formula_MailingAddress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Formula_HouseholdPhone__c</fullName>
        <formula>npo02__Household__r.npo02__HouseholdPhone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Household_Naming_Order__c</fullName>
        <label>Household Naming Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>npo02__Household__c</referenceTo>
        <relationshipLabel>Household Members</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npo02__Languages__c</fullName>
        <label>Languages - DEPRECATED</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__LargestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Largest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__LastCloseDateHH__c</fullName>
        <formula>npo02__Household__r.npo02__LastCloseDate__c</formula>
        <label>Last Household Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastCloseDate__c</fullName>
        <label>Last Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipDate__c</fullName>
        <label>Last Membership Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipLevel__c</fullName>
        <label>Last Membership Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipOrigin__c</fullName>
        <label>Last Membership Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__LastOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Gift Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Level__c</fullName>
        <label>Level - DEPRECATED</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npo02__MembershipEndDate__c</fullName>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__MembershipJoinDate__c</fullName>
        <label>Membership Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__Naming_Exclusions__c</fullName>
        <inlineHelpText>Determines which household names this contact is NOT included as part of.</inlineHelpText>
        <label>Naming Exclusions</label>
        <picklist>
            <picklistValues>
                <fullName>Household__c.Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household__c.Formal_Greeting__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household__c.Informal_Greeting__c</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>npo02__NumberOfClosedOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Number of Gifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__NumberOfMembershipOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Memberships</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmount2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts Two Years Ago</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts Last N Days</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountLastYearHH__c</fullName>
        <formula>npo02__Household__r.npo02__OppAmountLastYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Household Gifts Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts Last Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountThisYearHH__c</fullName>
        <formula>npo02__Household__r.npo02__OppAmountThisYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Household Gifts This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts This Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosed2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Gifts Two Years Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Gifts Last N Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Gifts Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Gifts This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__SmallestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Smallest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_Last_Year__c</fullName>
        <inlineHelpText>Total soft credit amount last year.</inlineHelpText>
        <label>Soft Credit Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_This_Year__c</fullName>
        <inlineHelpText>Total soft credit amount this year</inlineHelpText>
        <label>Soft Credit This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_Total__c</fullName>
        <inlineHelpText>Total amount in soft credits for this Contact&apos;s lifetime. Defined in the Household Settings tab.</inlineHelpText>
        <label>Soft Credit Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_Two_Years_Ago__c</fullName>
        <inlineHelpText>Total soft credit amount two years ago.</inlineHelpText>
        <label>Soft Credit Two Years Ago</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__SystemHouseholdProcessor__c</fullName>
        <description>Used to set if Households should get created for all Contacts, or just those which are connected to an individual account</description>
        <label>_SYSTEM: HOUSEHOLD PROCESSOR</label>
        <picklist>
            <picklistValues>
                <fullName>All Individual Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All New or Edited Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contacts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npo02__TotalMembershipOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__TotalOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Total_Household_Gifts__c</fullName>
        <formula>npo02__Household__r.npo02__TotalOppAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Household Gifts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Highly_Engaged_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Engagement_Level__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Engagement_Level_Numeric__c</field>
            <operation>greaterOrEqual</operation>
            <value>4</value>
        </filters>
        <label>All Highly Engaged Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Cons_w_Engagement</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Engagement_Level__c</columns>
        <columns>Engagement_Level_Numeric__c</columns>
        <columns>Engagement_Level_Override__c</columns>
        <columns>Engagement_Peak__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Cons w Engagement</label>
    </listViews>
    <listViews>
        <fullName>Cons_w_Engagement_0</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Engagement_Level__c</columns>
        <columns>Engagement_Level_Numeric__c</columns>
        <columns>Engagement_Peak__c</columns>
        <columns>First_Engagement_Level__c</columns>
        <columns>First_Engagement_Level_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Engagement_Level_Numeric__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Cons w Engagement &gt; 0</label>
    </listViews>
    <listViews>
        <fullName>Contacts_Moved_Up_Level_This_Week</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Engagement_Level__c</columns>
        <columns>Engagement_Peak__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Last_Leadership_Action_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Last_Leadership_Action_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>Last_Engagement_Change__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>ENGAGE:Contacts Moved Up Level This Week</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>My_High_Level_Supporters</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Engagement_Level__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Engagement_Level_Numeric__c</field>
            <operation>greaterOrEqual</operation>
            <value>4</value>
        </filters>
        <label>My Highly Engaged Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
</CustomObject>